CT-3815 Fix contrast when hovering over menu

--- a/app/assets/stylesheets/moj/_navigation.scss
+++ b/app/assets/stylesheets/moj/_navigation.scss
@@ -10,7 +10,7 @@
         color: $text-colour
       }
       a:hover, a:focus {
-        color: $secondary-text-colour;
+        background-color: $yellow;
       }
     }
     li.active {
